pom.xml refactoring